--- a/public/views/authView.html
+++ b/public/views/authView.html
@@ -3,17 +3,22 @@
     border-radius: 0;
   }
 </style>
-<div class="col-sm-4 col-sm-offset-4">
-    <div class="well">
-        <h3>Login</h3>
-        <form>
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email" ng-model="email">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" ng-model="password">
-            </div>
-            <button class="btn btn-primary btn-block" ng-click="login()">Submit</button>
-        </form>
-    </div>
+
+<nav-bar data='{active:"login"}'></nav-bar>
+
+<div class="container">
+  <div class="col-sm-4 col-sm-offset-4">
+      <div class="well">
+          <h3>Login</h3>
+          <form>
+              <div class="form-group">
+                  <input type="email" class="form-control" placeholder="Email" ng-model="email">
+              </div>
+              <div class="form-group">
+                  <input type="password" class="form-control" placeholder="Password" ng-model="password">
+              </div>
+              <button class="btn btn-primary btn-block" ng-click="login()">Submit</button>
+          </form>
+      </div>
+  </div>
 </div>
