--- a/public/views/registerView.html
+++ b/public/views/registerView.html
@@ -3,20 +3,23 @@
     border-radius: 0;
   }
 </style>
-<div class="col-sm-4 col-sm-offset-4">
+<nav-bar data='{active:"signup"}'></nav-bar>
+<div class="active">
+  <div class="col-sm-4 col-sm-offset-4">
     <div class="well">
-        <h3>SignUp</h3>
-        <form>
-            <div class="form-group">
-                <input type="name" class="form-control" placeholder="Name" ng-model="name">
-            </div>
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email" ng-model="email">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" ng-model="password">
-            </div>
-            <button class="btn btn-primary btn-block" ng-click="doregister()">Submit</button>
-        </form>
+      <h3>SignUp</h3>
+      <form>
+        <div class="form-group">
+          <input type="name" class="form-control" placeholder="Name" ng-model="name">
+        </div>
+        <div class="form-group">
+          <input type="email" class="form-control" placeholder="Email" ng-model="email">
+        </div>
+        <div class="form-group">
+          <input type="password" class="form-control" placeholder="Password" ng-model="password">
+        </div>
+        <button class="btn btn-primary btn-block" ng-click="doregister()">Submit</button>
+      </form>
     </div>
+  </div>
 </div>
