--- a/public/views/userView.html
+++ b/public/views/userView.html
@@ -3,22 +3,25 @@
     border-radius: 0;
   }
 </style>
-<div class="col-sm-6 col-sm-offset-3">
+<nav-bar data='{active:"user"}'></nav-bar>
+<div class="container">
+  <div class="col-sm-6 col-sm-offset-3">
 
     <div class="well">
-        <h3>Welcome!</h3>
+      <h3>Welcome!</h3>
 
-        <ul class="list-group" >
-            <li class="list-group-item">
-                <h4>{{name}}</h4>
-                <h5>{{email}}</h5>
-                <h5>created at {{created_at}}</h5>
-                <h5>updated at {{updated_at}}</h5>
-            </li>
-        </ul>
-        <div class="alert alert-danger" ng-if="user.error">
-            <strong>There was an error: </strong> {{user.error.error}}
-            <br>Please go back and login again
-        </div>
+      <ul class="list-group" >
+        <li class="list-group-item">
+          <h4>{{name}}</h4>
+          <h5>{{email}}</h5>
+          <h5>created at {{created_at}}</h5>
+          <h5>updated at {{updated_at}}</h5>
+        </li>
+      </ul>
+      <div class="alert alert-danger" ng-if="user.error">
+        <strong>There was an error: </strong> {{user.error.error}}
+        <br>Please go back and login again
+      </div>
     </div>
+  </div>
 </div>
