logout functionality is added

--- a/public/views/navBarTemplate.html
+++ b/public/views/navBarTemplate.html
@@ -23,7 +23,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-if="data.active == 'user'">
         <li>
-          <a href="#" id="btn-logout"class="btn btn-warning ">
+          <a href="#/logout" id="btn-logout"class="btn btn-warning ">
             <i class="fa fa-sign-out"></i>
             Logout
           </a>
